# candle-exercises

./: .gitignore  Cargo.toml  README.md  info.toml  todo.org
data/mnist/: data.csv  target.csv
exercises/: hello.rs
exercises/0_mnist/: dataloader.rs  model.rs
solutions/: hello.rs
solutions/0_mnist/: dataloader.rs  model.rs  tensor.rs
