# Don't edit the `bin` list manually! It is updated by `rustlings dev update`
bin = [
  { name = "hello", path = "exercises/hello.rs" },
  { name = "hello_sol", path = "solutions/hello.rs" },
]

[package]
name = "exercises"
edition = "2021"
# Don't publish the exercises on crates.io!
publish = false

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
